fixing canvas scrollbar

--- a/contact.css
+++ b/contact.css
@@ -1,11 +1,23 @@
 * {
 	letter-spacing: -0.5px;
 	font-size: 24px;
+	margin: 0;
+	padding: 0;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 h1 {
 	font-family: Times New Roman; 
 	font-weight: normal;
+}
+
+#container {
+	background-color: #dedede;
 }
 
 h1:hover {
@@ -36,4 +48,11 @@ a:hover {
 	text-decoration: none;
 	color: black;
 	font-style: italic;
+}
+
+#canvas {
+    position:absolute;
+    width: 100%;
+  	height: 100%;
+  	display: block;
 }
